# DM-Car/src/api/specification/api_specification_dm_car.yaml
@@ -8,6 +8,7 @@ tags:
 paths:
   /cars:
     post:
+      operationId: AddCar
       summary: Add a new car
       tags:
         - Cars
@@ -25,6 +26,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/car'
     get:
+      operationId: GetCars
       summary: Retrieve all existing cars
       tags:
         - Cars
@@ -40,6 +42,7 @@ paths:
 
   /cars/{vin}:
     get:
+      operationId: GetCar
       summary: Retrieve an existing car
       tags:
         - Cars
@@ -66,7 +69,7 @@ components:
     vin:
       type: string
       description: Identifier of a car
-      format: uuid
+      pattern: '^[A-HJ-NPR-Z0-9]{13}[0-9]{4}$'
     car:
       type: object
       properties:
