# DM-Car/src/api/stubs/server.go
@@ -1,6 +1,6 @@
 // Package stubs provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version v1.13.0 DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.13.4 DO NOT EDIT.
 package stubs
 
 import (
@@ -14,13 +14,13 @@ import (
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
 	// Retrieve all existing cars
-	// (GET /car)
+	// (GET /cars)
 	GetCars(ctx echo.Context) error
 	// Add a new car
-	// (POST /car)
+	// (POST /cars)
 	AddCar(ctx echo.Context) error
 	// Retrieve an existing car
-	// (GET /car/{vin})
+	// (GET /cars/{vin})
 	GetCar(ctx echo.Context, vin Vin) error
 }
 
@@ -29,25 +29,25 @@ type ServerInterfaceWrapper struct {
 	Handler ServerInterface
 }
 
-// GetCar converts echo context to params.
+// GetCars converts echo context to params.
 func (w *ServerInterfaceWrapper) GetCars(ctx echo.Context) error {
 	var err error
 
-	// Invoke the callback with all the unmarshalled arguments
+	// Invoke the callback with all the unmarshaled arguments
 	err = w.Handler.GetCars(ctx)
 	return err
 }
 
-// PostCar converts echo context to params.
+// AddCar converts echo context to params.
 func (w *ServerInterfaceWrapper) AddCar(ctx echo.Context) error {
 	var err error
 
-	// Invoke the callback with all the unmarshalled arguments
+	// Invoke the callback with all the unmarshaled arguments
 	err = w.Handler.AddCar(ctx)
 	return err
 }
 
-// GetCarVin converts echo context to params.
+// GetCar converts echo context to params.
 func (w *ServerInterfaceWrapper) GetCar(ctx echo.Context) error {
 	var err error
 	// ------------- Path parameter "vin" -------------
@@ -58,7 +58,7 @@ func (w *ServerInterfaceWrapper) GetCar(ctx echo.Context) error {
 		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter vin: %s", err))
 	}
 
-	// Invoke the callback with all the unmarshalled arguments
+	// Invoke the callback with all the unmarshaled arguments
 	err = w.Handler.GetCar(ctx, vin)
 	return err
 }
